# maki

./: .gitignore  .makirc.json  BENCHMARK_SUMMARY.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  FINAL_SESSION_REPORT.md  MAKI_PLAN.md  README.md  SESSION_SUMMARY.md  instance-export-issues.md  justfile  sushi-parity-plan.md  test-real-igs.sh
crates/fsh-lint-bench/: Cargo.toml
crates/fsh-lint-bench/benches/: lint_benchmark.rs
crates/fsh-lint-cli/: Cargo.toml
crates/fsh-lint-cli/src/: commands.rs  main.rs  output.rs
crates/fsh-lint-cli/tests/: integration_tests.rs
crates/fsh-lint-core/: Cargo.toml
crates/fsh-lint-core/examples/: diagnostic_demo.rs
crates/fsh-lint-core/src/: ast.rs  autofix.rs  cache.rs  config.rs  diagnostics.rs  discovery.rs  error.rs  executor.rs  formatter.rs  formatter.rs.bak  lexer.rs  lib.rs  parser.rs  parser_chumsky.rs  parser_chumsky.rs.bak  parser_old.rs.bak  result.rs  rules.rs  semantic.rs  semantic.rs.bak
crates/fsh-lint-core/src/config/: fsh_lint_config.rs  loader.rs  merge.rs  mod.rs
crates/fsh-lint-core/src/cst/: ast.rs  ast_tests.rs  builder.rs  formatter.rs  formatter_insta_tests.rs  language.rs  lexer.rs  mod.rs  nodes.rs  parser.rs  syntax_kind.rs  tests.rs
crates/fsh-lint-core/src/diagnostics/: diff.rs  renderer.rs  types.rs
crates/fsh-lint-core/test_configs/: extended.fshlintrc.json
crates/fsh-lint-core/tests/: README.md  autofix_tests.rs  diagnostics_tests.rs  executor_tests.rs  formatter_demo.rs  formatter_tests.rs  golden_file_tests.rs  integration_tests.rs  parser_tests.rs  semantic_tests.rs  test_parser.rs
crates/fsh-lint-core/tests/golden_files/: extension.fsh  simple_profile.fsh
crates/fsh-lint-core/tests/test_parser/: mock_tree_sitter_fsh.rs
crates/fsh-lint-devtools/: Cargo.toml
crates/fsh-lint-devtools/src/: config_generator.rs  main.rs  rule_doc_generator.rs  schema_generator.rs
crates/fsh-lint-integration-tests/: Cargo.toml
crates/fsh-lint-integration-tests/tests/: integration_test.rs
crates/fsh-lint-rules/: Cargo.toml
crates/fsh-lint-rules/src/: builtin.rs  engine.rs  fhir_registry.rs  gritql.rs  gritql_ast.rs  lib.rs  pattern_parser.rs
crates/fsh-lint-rules/src/builtin/: binding.rs  cardinality.rs  duplicates.rs  metadata.rs  naming.rs  profile.rs  required_fields.rs
crates/fsh-lint-rules/src/gritql/: builtins.rs  compiler.rs  cst_adapter.rs  cst_language.rs  cst_tree.rs  executor.rs  loader.rs  mod.rs  parser.rs  query_context.rs  registry.rs
crates/fsh-lint-rules/tests/: builtin_rules_test.rs  debug_cst_structure.rs  gritql_directory_loading_test.rs  gritql_full_integration_test.rs  gritql_integration_test.rs  gritql_pattern_matching_test.rs  gritql_real_file_test.rs  integration_test.rs  required_fields_tests.rs  rule_engine_test.rs  rule_management_test.rs  simple_test.rs
crates/fsh-lint-rules/tests/snapshots/: gritql_full_integration_test__full_pipeline_parse_compile.snap  gritql_full_integration_test__parser_assignment.snap  gritql_full_integration_test__parser_not.snap  gritql_full_integration_test__parser_simple_node.snap  gritql_full_integration_test__parser_variable.snap  gritql_full_integration_test__parser_where_clause.snap  gritql_full_integration_test__predicate_field_exists.snap
crates/fsh-lint-rules/tests/test_data/: best_practice_examples.fsh  semantic_examples.fsh  syntax_examples.fsh
crates/maki-bench/: Cargo.toml
crates/maki-bench/benches/: decompiler_benchmark.rs  lint_benchmark.rs
crates/maki-cli/: Cargo.toml  Cargo.toml.add
crates/maki-cli/src/: commands.rs  main.rs  output.rs
crates/maki-cli/src/commands/: build.rs  (+2 more)
crates/maki-cli/tests/: integration_tests.rs
crates/maki-core/: Cargo.toml
crates/maki-core/benches/: formatter_token_optimization.rs
crates/maki-core/examples/: diagnostic_demo.rs  list_instances.rs  parse_file.rs  print_parents.rs  test_formatter_v2.rs  token_counts.rs
crates/maki-core/src/: autofix.rs  cache.rs  console.rs  discovery.rs  error.rs  executor.rs  formatter.rs  lib.rs  parser.rs  result.rs  rules.rs  semantic.rs
crates/maki-core/test_configs/: base.fshlintrc.toml  extended.makirc.json  test.fshlintrc.json
crates/maki-core/tests/: README.md  autofix_tests.rs  dependency_graph_test.rs  diagnostics_tests.rs  executor_tests.rs.disabled  extension_export_test.rs  extension_parser_test.rs  fishable_integration_test.rs  formatter_demo.rs  formatter_tests.rs  golden_export_tests.rs  golden_file_tests.rs  golden_files_real_world.rs  integration_tests.rs  logical_export_test.rs  negative_parser_tests.rs  parser_debug_test.rs  parser_tests.rs  path_resolver_test.rs  profile_export_integration_test.rs  round_trip_tests.rs  ruleset_expansion_test.rs  semantic_tests.rs  sushi_config_test.rs  sushi_config_test.rs.disabled  valueset_advanced_features_test.rs  valueset_advanced_features_test.rs.disabled  valueset_exporter_unit_test.rs
crates/maki-decompiler/: Cargo.toml
crates/maki-decompiler/examples/: advanced_extractors_demo.rs  assignment_extractor_demo.rs  file_organizer_demo.rs  fsh_writer_demo.rs  full_pipeline_demo.rs
crates/maki-decompiler/src/: canonical.rs  config_generator.rs  error.rs  lake.rs  lib.rs  loader.rs  organizer.rs  stats.rs  test_helpers.rs  writer.rs
crates/maki-decompiler/tests/: golden_file_tests.rs  integration_foundation.rs  performance_baseline.rs  real_world_ig_tests.rs  round_trip_tests.rs
crates/maki-devtools/: Cargo.toml
crates/maki-devtools/src/: config_generator.rs  main.rs  rule_doc_generator.rs  schema_generator.rs
crates/maki-formatter/: Cargo.toml  README.md
crates/maki-formatter/src/: lib.rs
crates/maki-integration-tests/: Cargo.toml  README.md
crates/maki-integration-tests/src/: lib.rs  sushi_parity.rs
crates/maki-integration-tests/tests/: edge_case_patterns.rs  integration_test.rs  semantic_equivalence_tests.rs  sushi_compatibility_test.rs  sushi_compliance_suite.rs  sushi_reference_tests.rs
crates/maki-lsp/: Cargo.toml  README.md
crates/maki-lsp/src/: lib.rs  server.rs
crates/maki-test/: Cargo.toml  README.md
crates/maki-test/src/: lib.rs  runner.rs
(+361 files in other folders)
