[workspace]
members = [
  "crates/fsh-lint-core",
  "crates/fsh-lint-cli",
  "crates/fsh-lint-rules",
  "crates/fsh-lint-devtools",
  "crates/fsh-lint-bench",
  "crates/fsh-lint-integration-tests",
]
resolver = "3"

[workspace.package]
version = "0.0.4"
authors = ["OctoFHIR Team <funyloony@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/octofhir/fsh-lint-rs"
homepage = "https://github.com/octofhir"
edition = "2024"

[workspace.dependencies]
# Core parsing and AST - using Chumsky parser combinator
chumsky = "0.11.1"
ariadne = "0.5"

# CST (Concrete Syntax Tree) - using Rowan for lossless syntax trees
rowan = "0.16"
biome_text_size = "0.5"

# Serialization and configuration
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9"

# CLI and argument parsing
clap = { version = "4.0", features = ["derive", "env"] }

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Parallel processing
rayon = "1.7"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
thiserror = "2"
anyhow = "1.0"

# File system operations
walkdir = "2.3"
glob = "0.3"
notify = "8"

# Caching
dashmap = "6"

# Testing
criterion = { version = "0.7", features = ["html_reports"] }
insta = { version = "1.40", features = ["yaml"] }
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.0"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
opt-level = 3
strip = true

# Size-optimized release profile for binaries
[profile.release-size]
inherits = "release"
opt-level = "z"      # Optimize for size
lto = "fat"          # Full LTO for maximum size reduction
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
debug = true
# Reduce symbol name lengths to avoid macOS linker issues with parser combinators
opt-level = 0
incremental = true
