[workspace]
members = [
  "crates/maki-core",
  "crates/maki-cli",
  "crates/maki-rules",
  "crates/maki-lsp",
  "crates/maki-formatter",
  "crates/maki-test",
  "crates/maki-devtools",
  "crates/maki-bench",
  "crates/maki-integration-tests",
  "crates/maki-decompiler",
]
resolver = "3"

[workspace.package]
version = "0.0.4"
authors = ["OctoFHIR Team <funyloony@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/octofhir/maki"
homepage = "https://github.com/octofhir"
edition = "2024"

[workspace.dependencies]
# Core parsing and AST - using Chumsky parser combinator
chumsky = "0.11.1"
ariadne = "0.6"

# CST (Concrete Syntax Tree) - using Rowan for lossless syntax trees
rowan = "0.16"
biome_text_size = "0.5"

# Serialization and configuration
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
toml = "0.9"
serde_yaml = "0.9"

# CLI and argument parsing
clap = { version = "4", features = ["derive", "env"] }

# Async runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# Parallel processing
rayon = "1.7"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
thiserror = "2"
anyhow = "1.0"

# Version handling
semver = { version = "1.0", features = ["serde"] }

# File system operations
walkdir = "2.3"
glob = "0.3"
notify = "8"

# Caching
dashmap = "6"

# Canonical package management
octofhir-canonical-manager = { version = "0.1.21", default-features = false, features = [
  "cli",
  "sqlite"
] }

# Testing
criterion = { version = "0.7", features = ["html_reports"] }
insta = { version = "1.44", features = ["yaml"] }
assert_cmd = "2"
predicates = "3.0"
tempfile = "3.0"

# LSP
tower-lsp = "0.20"

# Internal crate dependencies
maki-core = { path = "crates/maki-core" }
maki-rules = { path = "crates/maki-rules" }
maki-lsp = { path = "crates/maki-lsp" }
maki-formatter = { path = "crates/maki-formatter" }
maki-test = { path = "crates/maki-test" }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
opt-level = 3
strip = true

# Size-optimized release profile for binaries
[profile.release-size]
inherits = "release"
opt-level = "z"      # Optimize for size
lto = "fat"          # Full LTO for maximum size reduction
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
debug = true
# Reduce symbol name lengths to avoid macOS linker issues with parser combinators
opt-level = 0
incremental = true
