[package]
name = "fsh-lint-cli"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Command-line interface for FSH linter"

[[bin]]
name = "fsh-lint"
path = "src/main.rs"

[dependencies]
fsh-lint-core = { path = "../fsh-lint-core" }
fsh-lint-rules = { path = "../fsh-lint-rules" }
clap = { version = "4.0", features = ["derive", "env", "color", "suggestions"] }
clap_complete = "4.0"
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
colored = "2.0"
rayon = { workspace = true }
atty = "0.2"
glob = "0.3"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.0"
