[package]
name = "fsh-lint-core"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Core linting engine for FHIR Shorthand (FSH) files"

[dependencies]
tree-sitter = { workspace = true }
tree-sitter-fsh = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
tokio = { workspace = true }
rayon = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
walkdir = { workspace = true }
glob = { workspace = true }
notify = { workspace = true }
dashmap = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
tokio-test = "0.4"
tempfile = "3.8"
tree-sitter-json = "0.20"
