[package]
name = "fsh-lint-devtools"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Developer tools for fsh-lint - schema generation and documentation"

[[bin]]
name = "fsh-lint-devtools"
path = "src/main.rs"

[dependencies]
fsh-lint-core = { path = "../fsh-lint-core" }
fsh-lint-rules = { path = "../fsh-lint-rules" }

clap = { version = "4.5", features = ["derive"] }
schemars = "1.0"                                  # Use same version as core
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
tempfile = "3.8"
