[package]
name = "fsh-lint-rules"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Built-in rules and rule engine for FSH linter"

[dependencies]
fsh-lint-core = { path = "../fsh-lint-core" }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
walkdir = { workspace = true }
regex = "1.10"
once_cell = "1.20"

grit-pattern-matcher = "0.5.1"
grit-util = "0.5.1"
glob = "0.3"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.8"
insta = { version = "1.40", features = ["yaml"] }
