[package]
name = "maki-bench"
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
edition.workspace = true
publish = false

[dependencies]
criterion = { workspace = true }
maki-core = { path = "../maki-core" }
maki-rules = { path = "../maki-rules" }
maki-decompiler = { path = "../maki-decompiler" }
tokio = { workspace = true }

[[bench]]
name = "lint_benchmark"
harness = false

[[bench]]
name = "decompiler_benchmark"
harness = false
