[package]
name = "maki-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Command-line interface for the MAKI FSH tooling suite"

[[bin]]
name = "maki"
path = "src/main.rs"

[dependencies]
maki-core = { path = "../maki-core" }
maki-rules = { path = "../maki-rules" }
clap = { version = "4", features = ["derive", "env", "color", "suggestions"] }
clap_complete = "4"
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
toml = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
colored = "3.0"
rayon = { workspace = true }
atty = "0.2"
glob = "0.3"
inquire = "0.7"
reqwest = { version = "0.12", features = ["json"] }
num_cpus = "1.16"
indicatif = "0.18"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.0"
