[package]
name = "maki-decompiler"
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
edition.workspace = true

[dependencies]
# Core dependencies
maki-core = { path = "../maki-core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
quick-xml = { version = "0.36", features = ["serialize"] }
thiserror = "1.0"
anyhow = "1.0"
log = "0.4"

# Data structures
indexmap = "2.0"
petgraph = "0.6"

# Async support (required for Fishable trait)
async-trait = "0.1"
tokio = { version = "1.0", features = ["full"] }

[dev-dependencies]
tempfile = "3.0"
env_logger = "0.11"
serial_test = "3.0"
