[package]
name = "maki-devtools"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Developer tooling for the MAKI suite (schema generation, docs, utilities)"

[[bin]]
name = "maki-devtools"
path = "src/main.rs"

[dependencies]
maki-core = { path = "../maki-core" }
maki-rules = { path = "../maki-rules" }

clap = { version = "4.5", features = ["derive"] }
schemars = "1.0"                                  # Use same version as core
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
tempfile = "3.8"
