[package]
name = "maki-lsp"
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true
description = "Language Server Protocol (LSP) implementation for FHIR Shorthand"

[dependencies]
# Internal dependencies
maki-core = { path = "../maki-core" }
maki-rules = { path = "../maki-rules" }

# LSP server implementation
tower-lsp = "0.20"
tokio.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Logging
tracing.workspace = true

# Error handling
thiserror.workspace = true
anyhow.workspace = true

[dev-dependencies]
tokio-test = "0.4"
